--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "chart.js": "4.2.1",
     "next": "13.4.8",
+    "next-auth": "^4.24.5",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primereact": "^9.6.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.3"
+    "react-hook-form": "^7.49.2",
+    "typescript": "5.1.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "eslint": "8.43.0",
