--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.8",
     "@hookform/resolvers": "^3.3.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "chart.js": "4.2.1",
+    "graphql": "^16.8.1",
+    "lodash": "^4.17.21",
     "next": "13.4.8",
     "next-auth": "^4.24.5",
     "primeflex": "^3.3.1",
@@ -27,6 +30,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.202",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "prettier": "^2.8.8",
