--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
+    "axios": "^1.6.3",
     "chart.js": "4.2.1",
+    "cookies-next": "^4.1.0",
+    "dayjs": "^1.11.10",
     "graphql": "^16.8.1",
     "lodash": "^4.17.21",
     "next": "13.4.8",
@@ -23,9 +26,11 @@
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primereact": "^9.6.2",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.49.2",
+    "react-hot-toast": "^2.4.1",
     "typescript": "5.1.3",
     "zod": "^3.22.4"
   },
