--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "react-hook-form": "^7.49.2",
     "react-hot-toast": "^2.4.1",
     "typescript": "5.1.3",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.202",
+    "@types/uuid": "^9.0.7",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "prettier": "^2.8.8",
